MODON MRE BPDEV/force-app/main/default/objects/Bucket_Assignment__c/Bucket_Assignment__c.object-meta.xml
<CustomObject>
    <label>Bucket Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Bucket Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bucket Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>