MODON MRE BPDEV/force-app/main/default/objects/Bucket_Assignment__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bucket Assignments</relationshipLabel>
    <relationshipName>Bucket_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>