MODON MRE BPDEV/force-app/main/default/objects/Bucket_Assignment__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <label>Bucket</label>
    <referenceTo>Bucket__c</referenceTo>
    <relationshipLabel>Bucket Assignments</relationshipLabel>
    <relationshipName>Bucket_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>